--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,6 @@ div.center {
 	height: 400px;
 }
 
-
-.container-margin{
-	margin-top: 60px;
-}
-
 .section-text-color{
 	color: white;
 }
@@ -64,4 +59,12 @@ ul.develop-skills > li{
     background-position: center;
     background-size: cover;
 	color: black;
+}
+
+body{
+	margin-top: 100px;
+}
+
+.container-padding-top{
+	padding-top: 50px;
 }
