--- a/css/styles.css
+++ b/css/styles.css
@@ -69,3 +69,19 @@ body{
 .container-padding-top{
 	padding-top: 50px;
 }
+
+.footer{
+	background-color: #333;
+	font-size: 20px;
+	margin-top:100px;
+}
+
+footer div{
+	position: relative;
+	top: -22px;
+}
+
+.li-margin{
+	margin: 39px;
+	font-size: 20px;
+}
